fixes cutoff text on buttons in review and submit page

--- a/css/overrides.scss
+++ b/css/overrides.scss
@@ -238,6 +238,7 @@ legend.schemaform-label {
 .accordion-header.clearfix.schemaform-chapter-accordion-header > button {
   color: #0050d8;
   font-weight: 500;
+  height: auto;
 }
 
 .filepond--root {
